<resources>
    <string name="app_name">Karyakita</string>
    <string name="copyright">Copyright @2018 Karyakita.com</string>
    <string name="back">Kembali ke beranda</string>
    <string name="on_maintenance">Halaman ini sedang dalam Maintenance</string>
    <string name="maaf">Oooppss, Maaf !</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">username@karyakita.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cari">Cari</string>
    <string name="title_activity_login">Sign in</string>
    <string name="beranda_string">Beranda</string>
    <string name="kategori_string">Kategori</string>
    <string name="desainer_string">Desainer</string>
    <string name="pesanan_saya_string">Pesanan Saya</string>
    <string name="search_hint">Cari Karya</string>
    <string name="notifikasi_string">Notifikasi</string>
    <string name="akun_string">Akun</string>
    <string name="keluar_string">Keluar</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_in">Log In</string>
    <string name="customer">Customer</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="masuk">Masuk</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">DAFTAR</string>
    <string name="beranda">Beranda</string>
    <string name="pesanan_saya">Pesanan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="akun">Akun</string>
    <string name="desainer">Desainer</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="search">Search</string>
    <string name="detail_karya">Detail Karya</string>
    <string name="daftar_lowcase">Daftar</string>
    <string name="tugas_saya">Tugas Saya</string>
    <string name="pesanan">pesanan</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign Up</string>
    <string name="email">Email</string>

    <array name="opsi_provinsi">
        <item>Pilih Provinsi</item>
        <item>Jawa Timur</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
    </array>

    <array name="opsi_kabupaten">
        <item>Pilih Kabupaten</item>
        <item>Surabaya</item>
        <item>Sidoarjo</item>
        <item>Gresik</item>
    </array>

    <array name="opsi_kecamatan">
        <item>Pilih Kecamatan</item>
        <item>Sukolilo</item>
        <item>Semolowaru</item>
    </array>

    <array name="opsi_pengiriman">
        <item>Pilih Pengiriman</item>
        <item>JNE</item>
        <item>JNT</item>
    </array>
    <array name="kategori_desain">
        <item>Pilih Kategori</item>
        <item>Doodle Art</item>
        <item>Kaligrafi</item>
        <item>Karikatur</item>
        <item>Lettering</item>
        <item>Line Art</item>
        <item>Mozaik Art</item>
        <item>Original Character</item>
        <item>Papercut</item>
        <item>Siluet</item>
        <item>Sketsa</item>
        <item>Vector Art</item>
        <item>WPAP</item>
    </array>

    <array name="kurir">
        <item>Pilih Pengiriman</item>
        <item>JNE</item>
        <item>JNT</item>
    </array>

    <array name="ukuran_desain">
        <item>Pilih Ukuran</item>
        <item>4R</item>
        <item>10R</item>
    </array>

    <array name="opsi_desain">
        <item>Tanpa Bingkai</item>
        <item>Dengan Bingkai</item>
    </array>

    <array name="jenis_pengiriman">
        <item>Pilih Jenis Pengiriman</item>
        <item>TIKI</item>
        <item>JNE</item>
        <item>JT</item>
    </array>

    <array name="ukuran_kertas">
        <item>A4</item>
        <item>A3</item>
        <item>F4</item>
    </array>

    <array name="ukuran_pigora">
        <item>Pilih Opsi</item>
        <item>Ya</item>
        <item>Tidak</item>
    </array>
    <array name="jenis_kertas">
        <item>HVS</item>
        <item>Asturo</item>
        <item>Manila</item>
    </array>

    <array name="tanggal">
        <item>26</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </array>

    <array name="bulan">
        <item>November</item>
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>Desember</item>
    </array>

    <array name="tahun">
        <item>2018</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
    </array>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="read_file">This app needs access to your file storage so that it can read photos.</string>
</resources>
