<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_beranda_customer"
            android:icon="@drawable/ic_beranda"
            android:title="@string/beranda_string" />
        <item
            android:id="@+id/nav_kategori_customer"
            android:icon="@drawable/ic_kategori"
            android:title="@string/kategori_string"/>
        <item
            android:id="@+id/nav_desainer_customer"
            android:icon="@drawable/ic_designer"
            android:title="@string/desainer_string" />
        <item
            android:id="@+id/nav_pesanan_saya_customer"
            android:icon="@drawable/ic_pesanan_saya"
            android:title="@string/pesanan_saya_string" />
        <item
            android:id="@+id/nav_notifikasi_customer"
            android:icon="@drawable/ic_notifikasi"
            android:title="@string/notifikasi_string" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_akun_customer"
                android:icon="@drawable/ic_akun"
                android:title="@string/akun_string" />
            <item
                android:id="@+id/nav_keluar"
                android:icon="@drawable/ic_logout"
                android:title="@string/keluar_string" />
        </menu>
    </item>

</menu>
