<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/logo" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_Username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shapeemail"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_Password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/shapeemail"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textColorHighlight="@color/white"
                android:textColorHint="@color/white" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:buttonTint="@color/white"
                    android:checked="true"
                    android:text="Remember Me"
                    android:textColor="@color/white" />

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:drawablePadding="6dp"
                    android:padding="4dp"
                    android:text="Forget Password?"
                    android:textColor="@color/white" />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:padding="15dp"
                android:shadowColor="@android:color/transparent"
                android:text="@string/log_in" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:drawablePadding="6dp"
                android:text="@string/don_t_have_account_sign_up"
                android:textColor="@color/white" />

        </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
</android.support.v7.widget.LinearLayoutCompat>